<resources>
    <string name="app_name">TutleNeckEscape</string>
    <string name="button_scan">기기 찾기</string>
    <string name="button_scanning">기기 찾는중..</string>
    <string name="button_start">측정 시작</string>
    <string name="button_stop">측정 멈추기</string>
    <string name="button_data_save">데이터 저장</string>
    <!--<string name="button_disconnect">Disconnect</string>-->
    <string name="button_disconnect">연결 끊기</string>
    <string name="radio_button_125SPS">125 SPS</string>
    <string name="radio_button_250SPS">250 SPS</string>
    <string name="radio_button_500SPS">500 SPS</string>
    <string name="main_connect_check">블루투스 연결 확인</string>
    <string name="main_device_list">Device list</string>
    <string name="main_log">Log</string>
    <string name="main_emg_graph">EMG Graph</string>
    <string name="main_acc_graph">Acc Graph</string>
    <string name="main_gyro_graph">Gyro Graph</string>
    <string name="main_magneto_graph">Magneto Graph</string>
    <string name="error_device_connected">연결된 디바이스가 있습니다. 연결 해제 후 다시 시도하세요.</string>
    <string name="error_not_support_ble">BLE를 지원하지 않습니다.</string>
    <string name="error_ble_start_service">BLE 서비스에서 오류가 발생하였습니다.</string>
    <string name="error_device_working">디바이스가 응답하지 않습니다. 리셋 후 다시 시도하세요.</string>
    <string name="main_info_ble_on">블루투스가 켜져 있습니다.</string>
    <string name="main_info_ble_off">블루투스가 꺼져 있습니다. 블루투스를 켜주세요.</string>
    <string name="scan_complete">디바이스 검색이 완료되었습니다.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="database_name">bio_database</string>

    <string name="setting_title">앱 설정</string>

    <string name="messageBleInfo01">블루투스 기기연결을 진행합니다.</string>
    <string name="messageBleInfo02">센서의 전원을 켜고,\n기기찾기 버튼을 눌러주세요.</string>
</resources>

