<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

<!--
        <FrameLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
-->

        <RadioGroup
            android:id="@+id/rg_mainSamplingRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:checkedButton="@id/rb_mainSamplingRate250">

            <RadioButton
                android:id="@+id/rb_mainSamplingRate250"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_250SPS" />

            <RadioButton
                android:id="@+id/rb_mainSamplingRate500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_500SPS" />
        </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_mainScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_scan"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_mainStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_start"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_mainStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_stop"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_mainDisconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_disconnect"
            android:enabled="false"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_device_list"
        android:textStyle="bold|italic" />

    <ListView
        android:id="@+id/lv_mainDeviceList"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scrollbars="vertical">

    </ListView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_log"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tv_mainLogTextView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:scrollbars="vertical"
        android:gravity="bottom" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_emg_graph"
                android:textStyle="bold|italic" />

            <com.solmi.biobrainexample.Simple1ChannelGraph
                android:id="@+id/sg_mainEMGGraph"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_acc_graph"
                android:textStyle="bold|italic" />

            <com.solmi.biobrainexample.Simple3ChannelGraph
                android:id="@+id/sg_mainAccGraph"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_gyro_graph"
                android:textStyle="bold|italic" />

            <com.solmi.biobrainexample.Simple3ChannelGraph
                android:id="@+id/sg_mainGyroGraph"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_magneto_graph"
                android:textStyle="bold|italic" />

            <com.solmi.biobrainexample.Simple3ChannelGraph
                android:id="@+id/sg_mainMagnetoGraph"
                android:layout_width="match_parent"
                android:layout_height="200dp" />
        </LinearLayout>
        </ScrollView>
  <!--      </LinearLayout>
    </FrameLayout>-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:menu="@menu/bottom_nav" />

</LinearLayout>
