<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".process.BioStart1Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_b1f"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/tv_f_log_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            />
        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_f_log_06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_f_log_07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_f_log_08"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/btn_Start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_start"
                android:textSize="12sp"
                />

            <Button
                android:id="@+id/btn_Stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_stop"
                android:textSize="12sp"
                />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>